# shemmy_blog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.txt  docker-compose.yml  env-example  pyproject.toml
blog/: admin.py  context_processors.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogarticle_body_page.py  0003_rename_author_page_blog.py
blog/templates/: _blog_article.html  _site_header.html  article_list.html  base.html  blog_article.html
core/: asgi.py  settings.py  urls.py  validators.py  views.py  wsgi.py
core/static/css/: main.css
core/templates/: _document_head.html  _site_footer.html  _site_header.html  base.html
